// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoogleMap /> render if \`props.isFluid\` is \`true\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  hasDefaultStyles={false}
  height="400px"
  isFluid={true}
  isFullBleed={false}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
>
  <Card
    fluid={true}
    style={
      Object {
        "height": "100%",
        "maxWidth": "100%",
      }
    }
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
      style={
        Object {
          "height": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <withProps(withScriptjs(withGoogleMap(ReactGoogleMap)))
        apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
        hasDefaultStyles={false}
        height="100%"
        isShowingApproximateLocation={false}
        isShowingExactLocation={false}
        latitude={0}
        longitude={0}
        markers={Array []}
      >
        <withScriptjs(withGoogleMap(ReactGoogleMap))
          apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
          containerElement={
            <div
              style={
                Object {
                  "height": "100%",
                }
              }
            />
          }
          googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4&v=3.exp&libraries=geometry,drawing,places"
          hasDefaultStyles={false}
          height="100%"
          isShowingApproximateLocation={false}
          isShowingExactLocation={false}
          latitude={0}
          loadingElement={
            <div
              style={
                Object {
                  "height": "100%",
                }
              }
            />
          }
          longitude={0}
          mapElement={
            <div
              style={
                Object {
                  "height": "100%",
                }
              }
            />
          }
          markers={Array []}
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </withScriptjs(withGoogleMap(ReactGoogleMap))>
      </withProps(withScriptjs(withGoogleMap(ReactGoogleMap)))>
    </div>
  </Card>
</GoogleMap>
`;

exports[`<GoogleMap /> render if \`props.isFullBleed\` is \`true\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  hasDefaultStyles={false}
  height="400px"
  isFluid={false}
  isFullBleed={true}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
>
  <withProps(withScriptjs(withGoogleMap(ReactGoogleMap)))
    apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
    hasDefaultStyles={false}
    height="100%"
    isShowingApproximateLocation={false}
    isShowingExactLocation={false}
    latitude={0}
    longitude={0}
    markers={Array []}
  >
    <withScriptjs(withGoogleMap(ReactGoogleMap))
      apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
      containerElement={
        <div
          style={
            Object {
              "height": "100%",
            }
          }
        />
      }
      googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4&v=3.exp&libraries=geometry,drawing,places"
      hasDefaultStyles={false}
      height="100%"
      isShowingApproximateLocation={false}
      isShowingExactLocation={false}
      latitude={0}
      loadingElement={
        <div
          style={
            Object {
              "height": "100%",
            }
          }
        />
      }
      longitude={0}
      mapElement={
        <div
          style={
            Object {
              "height": "100%",
            }
          }
        />
      }
      markers={Array []}
    >
      <div
        style={
          Object {
            "height": "100%",
          }
        }
      />
    </withScriptjs(withGoogleMap(ReactGoogleMap))>
  </withProps(withScriptjs(withGoogleMap(ReactGoogleMap)))>
</GoogleMap>
`;

exports[`<GoogleMap /> render if \`state.isDynamicMapShowing\` is \`false\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  hasDefaultStyles={false}
  height="400px"
  isFluid={false}
  isFullBleed={false}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
>
  <Card
    fluid={true}
    style={
      Object {
        "height": "400px",
        "maxWidth": "640px",
      }
    }
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
      style={
        Object {
          "height": "400px",
          "maxWidth": "640px",
        }
      }
    >
      <img
        src="immmaaage"
      />
    </div>
  </Card>
</GoogleMap>
`;

exports[`<GoogleMap /> render if \`state.isDynamicMapShowing\` is \`true\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  hasDefaultStyles={false}
  height="400px"
  isFluid={false}
  isFullBleed={false}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
>
  <Card
    fluid={true}
    style={
      Object {
        "height": "400px",
        "maxWidth": "640px",
      }
    }
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
      style={
        Object {
          "height": "400px",
          "maxWidth": "640px",
        }
      }
    >
      <withProps(withScriptjs(withGoogleMap(ReactGoogleMap)))
        apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
        hasDefaultStyles={false}
        height="400px"
        isShowingApproximateLocation={false}
        isShowingExactLocation={false}
        latitude={0}
        longitude={0}
        markers={Array []}
      >
        <withScriptjs(withGoogleMap(ReactGoogleMap))
          apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
          containerElement={
            <div
              style={
                Object {
                  "height": "400px",
                }
              }
            />
          }
          googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4&v=3.exp&libraries=geometry,drawing,places"
          hasDefaultStyles={false}
          height="400px"
          isShowingApproximateLocation={false}
          isShowingExactLocation={false}
          latitude={0}
          loadingElement={
            <div
              style={
                Object {
                  "height": "400px",
                }
              }
            />
          }
          longitude={0}
          mapElement={
            <div
              style={
                Object {
                  "height": "400px",
                }
              }
            />
          }
          markers={Array []}
        >
          <div
            style={
              Object {
                "height": "400px",
              }
            }
          />
        </withScriptjs(withGoogleMap(ReactGoogleMap))>
      </withProps(withScriptjs(withGoogleMap(ReactGoogleMap)))>
    </div>
  </Card>
</GoogleMap>
`;
